TEST_PROGRAMS/VALID/Olivier_Melancon/var_names.min
var ifwhile: int;
var whileelse: float;
var string1: string;
