TEST_PROGRAMS/INVALID/alexandre_st-louis_fortier/037-read-expression.min
var a: int;
READ a - a;

